--- a/elixir/quenta/lib/quenta_web/controllers/page_html/home.html.heex
+++ b/elixir/quenta/lib/quenta_web/controllers/page_html/home.html.heex
@@ -3,8 +3,11 @@
   <p class="mb-4">What is your name?</p>
 
   <%= for user <- Quenta.Users.list_users() do %>
-    <div class="border p-4 mb-4">
-      <h2 class="text-xl font-semibold">{user.name}</h2>
-    </div>
+    <.link
+      href={~p"/users/#{user}"}
+      class="block mb-2 text-blue-600 hover:underline cursor-pointer"
+    >
+      {user.name}
+    </.link>
   <% end %>
 </div>
